[package]
name = "sensor-temp-humidity-sht40"
version = "0.4.0"
authors = ["Lucian Carata <luc@rez.how>"]
license = "BSD-3-Clause OR Apache-2.0"
description = "Driver for SHT40 temperature and humidity sensor"
keywords = ["sht40", "sensirion", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/lc525/sensor-temp-humidity-sht40-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sensirion-i2c = { git="https://github.com/lc525/sensirion-i2c-rs", branch="hal-1.0.0-alpha.6" }
embedded-hal = "1.0.0-alpha.6"

[dev-dependencies]
embedded-hal-mock = { git="https://github.com/niclashoyer/embedded-hal-mock", branch="hal-1.0.0" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = true
opt-level = 3
debug = false
