[package]
name = "sensor-temp-humidity-sht40"
version = "0.2.600"
authors = ["Lucian Carata <luc@rez.how>"]
license = "BSD-3-Clause OR Apache-2.0"
description = "Driver for SHT40 temperature and humidity sensor"
keywords = ["sht40", "sensirion", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/lc525/sensor-temp-humidity-sht40-rs"
edition = "2021"

[features]
# enable floating-point measurement datatypes
fp = [] 

[dependencies]
sensirion-i2c = "0.1.1"
embedded-hal = "0.2.6"

[dev-dependencies]
linux-embedded-hal = "0.3.2"
embedded-hal-mock = "0.8.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = true
opt-level = 3
debug = false
